examples/invalid/comment-unknown-domain-ref/src/php/CheckoutService.php
<?php

/**
 * @arch.node service checkout-service
 * @arch.name Checkout Service
 * @arch.domain missing-domain
 * @arch.owner team-commerce
 */
final class CheckoutService
{
}
